--- a/css/main.css
+++ b/css/main.css
@@ -12,19 +12,25 @@ body {
     font-size: 1.4rem;
     padding-right: 1.4rem;
 }
+
+#title-book {
+font-size: 25px;
+margin: 0;
+padding: 0;
+line-height: 1;
+font-weight: 600;
+letter-spacing: 0.8px;
+text-align: center;
+font-family: "Poppins", sans-serif;
+}
+
 #book {
     position: relative;
     background: url("../img/bg.jpeg") no-repeat fixed center;
     background-size: cover;
-    min-height: 550px;
 }
 #book .overlay {
-    background: rgba(153, 204, 255, 0.8); /*#99ccff*/
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    background: rgba(153, 204, 255, 0.75); /*#99ccff*/
 }
 .social-icons {
     text-align: left;
@@ -46,6 +52,13 @@ body {
 }
 
 @media (max-width: 768px) {
+    ul {
+        text-align: center;
+    }
+    
+    nav ul li {
+        display: block;
+    }
     .social-icons {
         text-align: center;
     }
@@ -55,7 +68,7 @@ body {
 }
 @media (max-width: 380px) {
     #book {
-        min-height: 600px;
+        min-height: 00px;
     }
 }
 @media (max-width: 320px) {
